--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "debug": "^2.1.0",
     "express": "^4.10.4",
     "moment": "^2.8.4",
+    "mongojs": "^0.18.0",
     "mustache-express": "^1.2.0",
-    "nsa": "0.0.5"
+    "nsa": "0.0.5",
+    "validator": "^3.22.2"
   }
 }
