--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mustache-express": "^1.2.0",
     "nsa": "0.0.5",
     "request": "^2.51.0",
+    "slug": "^0.8.0",
     "validator": "^3.22.2",
     "xz": "^1.0.4"
   }
