--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "Public Domain",
   "dependencies": {
     "JSONStream": "^0.10.0",
+    "async": "^0.9.0",
     "body-parser": "^1.10.0",
     "debug": "^2.1.0",
     "express": "^4.10.4",
