describe api keys in config dist

--- a/config.js.dist
+++ b/config.js.dist
@@ -1,6 +1,10 @@
 #!/usr/bin/env node
 module.exports = {
-	api: {},
+	api: {
+		keys: {
+//			"apikey": "Username"
+		}
+	},
 	listen: {
 		socket: "lobbyradar.sock",
 		// host: "localhost",
