--- a/station/assets/bower.json
+++ b/station/assets/bower.json
@@ -19,6 +19,7 @@
     "bootstrap": "~3.3.1",
     "angular-ui-router": "~0.2.13",
     "ng-table": "~0.3.3",
-    "angular-resource": "~1.3.7"
+    "angular-resource": "~1.3.7",
+    "fontawesome": "~4.2.0"
   }
 }
