--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "JSONStream": "^0.10.0",
     "async": "^0.9.0",
     "body-parser": "^1.10.0",
+    "cookie-parser": "^1.3.3",
     "debug": "^2.1.0",
     "express": "^4.10.4",
+    "express-session": "^1.10.0",
     "moment": "^2.8.4",
     "mongojs": "^0.18.0",
     "mustache-express": "^1.2.0",
