--- a/station/assets/bower.json
+++ b/station/assets/bower.json
@@ -20,6 +20,10 @@
     "angular-ui-router": "~0.2.13",
     "ng-table": "~0.3.3",
     "angular-resource": "~1.3.7",
-    "fontawesome": "~4.2.0"
+    "fontawesome": "~4.2.0",
+    "angular-bootstrap": "~0.12.0"
+  },
+  "resolutions": {
+    "angular": ">= 1.0.8"
   }
 }
