--- a/station/assets/bower.json
+++ b/station/assets/bower.json
@@ -21,7 +21,8 @@
     "ng-table": "~0.3.3",
     "angular-resource": "~1.3.7",
     "fontawesome": "~4.2.0",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "typeahead.js": "~0.10.5"
   },
   "resolutions": {
     "angular": ">= 1.0.8"
