--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "request": "^2.51.0",
     "slug": "^0.8.0",
     "sv": "^0.3.6",
+    "unq": "0.0.2",
     "validator": "^3.22.2",
     "xz": "^1.0.4"
   }
