--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.10.0",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.0",
+    "dur": "0.0.2",
     "express": "^4.10.4",
     "express-session": "^1.10.0",
     "moment": "^2.8.4",
@@ -29,6 +30,7 @@
     "request": "^2.51.0",
     "slug": "^0.8.0",
     "sv": "^0.3.6",
+    "trie-search": "^0.1.0",
     "unq": "0.0.2",
     "validator": "^3.22.2",
     "xz": "^1.0.4"
