--- a/config.js.dist
+++ b/config.js.dist
@@ -1,6 +1,7 @@
 #!/usr/bin/env node
 module.exports = {
 	api: {
+		reindex: "5min",
 		keys: {
 //			"apikey": "Username"
 		}
@@ -12,9 +13,6 @@ module.exports = {
 	},
 	db: "mongodb://127.0.0.1/lobbyradar",
 	nsa: null, // "udp4://server:port/",
-	search: {
-		reindex: "5min"
-	},
 	defaultadmin: {
 		name: "admin",
 		pass: "totalsupergehaim007"
