implement whitelist api

--- a/config.js.dist
+++ b/config.js.dist
@@ -2,6 +2,7 @@
 module.exports = {
 	api: {
 		reindex: "5min",
+		whitelist: "assets/data/whitelist.json",
 		keys: {
 //			"apikey": "Username"
 		}
