--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,7 @@ scripts
 config.codekit
 lobbynetwork/positions.json
 lobbynetwork/tiles
+lobbynetwork/.tiles
 lobbynetwork/test/node_positions.js
+assets/data
+assets/cache
