--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dur": "0.0.2",
     "express": "^4.10.4",
     "express-session": "^1.10.0",
+    "express-session-json": "0.0.8",
     "gm": "^1.17.0",
     "moment": "^2.8.4",
     "mongojs": "^0.18.0",
