add underscore dependency

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "slug": "^0.8.0",
     "sv": "^0.3.6",
     "trie-search": "^0.1.0",
+    "underscore": "^1.8.2",
     "unq": "0.0.2",
     "validator": "^3.22.2",
     "xz": "^1.0.4"
