--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lobbyradar",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "lobbyradar api",
   "main": "lobbyradar.js",
   "scripts": {
@@ -15,6 +15,7 @@
   "dependencies": {
     "JSONStream": "^0.10.0",
     "async": "^0.9.0",
+    "batgirl": "0.0.5",
     "body-parser": "^1.10.0",
     "cookie-parser": "^1.3.3",
     "d3": "^3.5.3",
