code cleanup, configguarble cookie secret

--- a/config.js.dist
+++ b/config.js.dist
@@ -35,6 +35,9 @@ module.exports = {
 		}
 	},
 
+	// cookie/session secret
+	secret: "<cookie secret>",
+
 	// default credentials for admin interface
 	defaultadmin: {
 		name: "admin",
