--- a/station/assets/bower.json
+++ b/station/assets/bower.json
@@ -22,7 +22,8 @@
     "angular-resource": "~1.3.7",
     "fontawesome": "~4.2.0",
     "angular-bootstrap": "~0.12.0",
-    "typeahead.js": "~0.10.5"
+    "typeahead.js": "~0.10.5",
+    "roboto-slab-fontface": "*"
   },
   "resolutions": {
     "angular": ">= 1.0.8"
