--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "0.1.1",
   "description": "lobbyradar api",
   "main": "lobbyradar.js",
-  "scripts": {
-    "test": "null"
-  },
   "repository": {
     "type": "git",
-    "url": "https://git.opendatacity.de/opendatacity/lobbyradar.git"
+    "url": "https://github.com/lobbyradar/lobbyradar.git"
   },
-  "author": "yetzt <node@yetzt.me> (https://yetzt.me/)",
-  "license": "Public Domain",
+  "author": "Datenfreunde UG <info@datenfreunde.com> (http://datenfreunde.de/)",
+  "license": "MIT",
   "dependencies": {
     "JSONStream": "^0.10.0",
     "async": "^0.9.0",
@@ -23,7 +20,7 @@
     "dur": "0.0.2",
     "express": "^4.10.4",
     "express-session": "^1.10.0",
-    "express-session-json": "0.0.8",
+    "express-session-json-store": "github:ffalt/express-session-json-store",
     "gm": "^1.17.0",
     "moment": "^2.8.4",
     "mongojs": "^0.18.0",
