update import fixes, range format with desc

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ config.codekit
 sessions.json
 lobbynetwork/positions.json
 local/
+log/
+*.css.map
 lobbynetwork/links.json
 
 lobbynetwork/nodes.json
