--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "request": "^2.51.0",
+    "serve-favicon": "^2.3.0",
     "slug": "^0.8.0",
     "sv": "^0.3.6",
     "trie-search": "^0.1.0",
