--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gm": "^1.17.0",
     "moment": "^2.8.4",
     "mongojs": "^0.18.0",
+    "mustache": "^2.1.2",
     "mustache-express": "^1.2.0",
     "nsa": "0.0.5",
     "passport": "^0.2.1",
