--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lobbyradar",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "lobbyradar api",
   "main": "lobbyradar.js",
   "repository": {
@@ -22,18 +22,18 @@
     "express-session": "^1.10.0",
     "express-session-json-store": "git+https://github.com/ffalt/express-session-json-store.git",
     "gm": "^1.17.0",
+    "mollusc": "^2.0.0",
     "moment": "^2.8.4",
     "mongojs": "^0.18.0",
     "mustache": "^2.1.2",
     "mustache-express": "^1.2.0",
-    "nsa": "0.0.5",
+    "nsa": "^0.2.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "request": "^2.51.0",
     "serve-favicon": "^2.3.0",
-    "slug": "^0.8.0",
     "sv": "^0.3.6",
-    "trie-search": "^0.1.0",
+    "trie-search": "^1.2.8",
     "underscore": "^1.8.2",
     "unq": "0.0.2",
     "validator": "^3.22.2",
